--- a/static/scss/_colors.scss
+++ b/static/scss/_colors.scss
@@ -7,6 +7,8 @@
 $black-base: #000 !default;
 $white-base: #fff !default;
 $foggy-grey: #4f4f4f !default;
+$white:                #fff;
+$black:                #000;
 
 // ====Red
 $red-lighten-5:  #ffebee !default;
