Added navbar sass properties

--- a/static/scss/_global_variables.scss
+++ b/static/scss/_global_variables.scss
@@ -1,6 +1,10 @@
 // Global styles
 // --------------------------------------------------------------------
 
+body{
+    margin: 0 !important;
+}
+
 // Headings
 
 h1 {
@@ -79,4 +83,46 @@ a:not([href]):not([tabindex]), a:not([href]):not([tabindex]):focus, a:not([href]
     padding: 20px 50px 20px 20px;
     background: #fff;
     border-left: 10px solid #f8b600;
+}
+
+// Container
+.container {
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 15px;
+    padding-left: 15px;
+    width: 100%;
+}
+
+@media (min-width: 576px) {
+    .container {
+        max-width: 540px;
+    }
+}
+
+@media (min-width: 768px) {
+    .container {
+        max-width: 720px;
+    }
+}
+
+@media (min-width: 992px) {
+    .container {
+        max-width: 960px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .container {
+        max-width: 1140px;
+    }
+}
+
+.container-fluid {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 15px;
+    padding-left: 15px;
+    width: 100%;
 }
