--- a/static/scss/_variable.scss
+++ b/static/scss/_variable.scss
@@ -2,6 +2,18 @@
 // Common variables to be used ny the rest of the sass files
 // --------------------------------------------------------------------
 
+// Typography
+
+$font-size-base:              1rem !default; // Assumes the browser default, typically `16px`
+$font-size-lg:                $font-size-base * 1.25 !default;
+$font-size-sm:                $font-size-base * .875 !default;
+
+$line-height-base:            1.5 !default;
+
+// Dimensions
+
+$spacer: 1rem !default;
+
 // Colors
 
 // Link Color
@@ -41,3 +53,4 @@ $z-depth-5:          0 27px 24px 0 rgba(0, 0, 0, 0.2), 0 40px 77px 0 rgba(0, 0, 
 // Transitions
 $transition-basic:            all .2s ease-in-out !default;
 $transition-hoverable:        all .55s ease-in-out !default;
+
