Added navbar to templates and container

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -6,7 +6,9 @@
 
 {% block content %}
 
-<h4 >Wellcome To CodeTopia</h4>
+<main class="container">
+    <h4 >Wellcome To CodeTopia</h4>
+</main>
 
 {% endblock content %}
 
