--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,3 +1,4 @@
+{% comment '' %}
 <ul>
     {% if request.user.is_authenticated %}
         <li><a href="{% url 'account:user_dashboard' request.user.username %}">Dashboard</a></li>
@@ -15,3 +16,13 @@
 		{% endfor %}
 	</ul>
 {% endif %}
+{% endcomment %}
+
+<nav class="navbar container-fluid" id="navbar">
+    <a href="#news">News</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+    <a href="javascript:void(0);" class="icon" onclick="nav_toggler()">
+        <i class="fa fa-bars"></i>
+    </a>
+</nav>
