Added navbar to navbar template with some scss stylesheet and typescript utility function

--- a/static/scss/_colors.scss
+++ b/static/scss/_colors.scss
@@ -73,4 +73,4 @@ $success-color:        #00c851 !default;
 $success-color-dark:   #007e33 !default;
 $warning-color:        #ffbb33 !default;
 $warning-color-dark:   #ff8800 !default;
-$error-color:          $red-base !default;
+$error-color:          $red-lighten-1 !default;
