--- a/static/scss/_variable.scss
+++ b/static/scss/_variable.scss
@@ -54,3 +54,4 @@ $z-depth-5:          0 27px 24px 0 rgba(0, 0, 0, 0.2), 0 40px 77px 0 rgba(0, 0, 
 $transition-basic:            all .2s ease-in-out !default;
 $transition-hoverable:        all .55s ease-in-out !default;
 
+// Navbar
