--- a/static/scss/_global_variables.scss
+++ b/static/scss/_global_variables.scss
@@ -2,7 +2,9 @@
 // --------------------------------------------------------------------
 
 body{
-    margin: 0 !important;
+    margin: 0px !important;
+    padding: 0px !important;
+    box-sizing: border-box;
 }
 
 // Headings
