--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -18,11 +18,24 @@
 {% endif %}
 {% endcomment %}
 
-<nav class="navbar container-fluid" id="navbar">
-    <a href="#news">News</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
-    <a href="javascript:void(0);" class="icon" onclick="nav_toggler()">
-        <i class="fa fa-bars"></i>
-    </a>
+<nav class="navbar z-depth-2">
+    <div class="brand">
+        <h5>CodeTopia</h5>
+    </div>
+    <ul class="nav-links">
+        <li><a href="{% url 'homepage' %}">Home</a></li>
+        <li><a href="{% url 'elements' %}">Elements</a></li>
+        {% if request.user.is_authenticated %}
+            <li><a href="{% url 'account:user_dashboard' request.user.username %}">Dashboard</a></li>
+            <li><a href="{% url 'account:user_logout' %}">Logout</a></li>
+        {% else %}
+            <li><a href="{% url 'account:user_login' %}">Login</a></li>
+            <li><a href="{% url 'account:create_user' %}">Sign up</a></li>
+        {% endif %}
+    </ul>
+    <div class="toggler">
+        <div class="l1"></div>
+        <div class="l2"></div>
+        <div class="l3"></div>
+    </div>
 </nav>
