--- a/account/templates/account/pwd_reset/password_reset.html
+++ b/account/templates/account/pwd_reset/password_reset.html
@@ -6,14 +6,16 @@
 
 {% block content %}
 
-<h1>Request Password Reset.</h1>
-<hr>
-<form action="{% url 'account:user_password_reset' %}" method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <small>Dont have an account <a href="{% url 'account:create_user' %}">Sign up here.</a></small> <br>
-    <button class="btn btn-primary" type="submit">Request Password Reset</button>
-</form>
+<div class="container">
+    <h1>Request Password Reset.</h1>
+    <hr>
+    <form action="{% url 'account:user_password_reset' %}" method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <small>Dont have an account <a href="{% url 'account:create_user' %}">Sign up here.</a></small> <br>
+        <button class="btn btn-primary" type="submit">Request Password Reset</button>
+    </form>
+</div>
 
 {% endblock content %}
 
