--- a/account/templates/account/dashboard/change_password.html
+++ b/account/templates/account/dashboard/change_password.html
@@ -6,14 +6,16 @@
 
 {% block content %}
 
-<h1>Chnage Password</h1>
-<hr>
-<form action="{% url 'account:change_user_password' request.user.username %}" method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <small>Forgot password? <a href="{% url 'account:user_password_reset' %}">reset here</a></small> <br>
-    <button type="submit">Request Change Password</button>
-</form>
+<div class="container">
+    <h1>Chnage Password</h1>
+    <hr>
+    <form action="{% url 'account:change_user_password' request.user.username %}" method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <small>Forgot password? <a href="{% url 'account:user_password_reset' %}">reset here</a></small> <br>
+        <button type="submit">Request Change Password</button>
+    </form>
+</div>
 
 {% endblock content %}
 
