--- a/account/templates/account/dashboard/profile_edit.html
+++ b/account/templates/account/dashboard/profile_edit.html
@@ -6,14 +6,16 @@
 
 {% block content %}
 
-<h1>Create account</h1>
-<hr>
-<form action="{% url 'account:create_user' %}" method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ user_form.as_p }}
-    {{ profile_form.as_p }}
-    <button type="submit">Update Profile</button>
-</form>
+<div class="container">
+    <h1>Create account</h1>
+    <hr>
+    <form action="{% url 'account:create_user' %}" method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ user_form.as_p }}
+        {{ profile_form.as_p }}
+        <button type="submit">Update Profile</button>
+    </form>
+</div>
 
 {% endblock content %}
 
