--- a/account/templates/account/pwd_reset/password_reset_complete.html
+++ b/account/templates/account/pwd_reset/password_reset_complete.html
@@ -6,12 +6,14 @@
 
 {% block content %}
 
-<h1>Congradulations Your Password Has Been Changed Succesfully.</h1>
-<hr>
-<p>
-    Your password has been set.  You may go ahead and log in now. <br>
-    <a href="{% url 'account:user_login' %}">Login</a>
-</p>
+<div class="container">
+    <h1>Congradulations Your Password Has Been Changed Succesfully.</h1>
+    <hr>
+    <p>
+        Your password has been set. You may go ahead and log in now. <br>
+        <a href="{% url 'account:user_login' %}">Login</a>
+    </p>
+</div>
 
 {% endblock content %}
 
