--- a/account/templates/account/pwd_reset/password_reset_confirm.html
+++ b/account/templates/account/pwd_reset/password_reset_confirm.html
@@ -6,13 +6,15 @@
 
 {% block content %}
 
-<h1>Request Password Reset.</h1>
-<hr>
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button class="btn btn-primary" type="submit">Change Password</button>
-</form>
+<div class="container">
+    <h1>Request Password Reset.</h1>
+    <hr>
+    <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button class="btn btn-primary" type="submit">Change Password</button>
+    </form>
+</div>
 
 {% endblock content %}
 
