--- a/account/templates/account/pwd_reset/password_reset_done.html
+++ b/account/templates/account/pwd_reset/password_reset_done.html
@@ -6,17 +6,20 @@
 
 {% block content %}
 
-<h1>Password Reset Request Sent.</h1>
-<hr>
+<div class="container">
+    <h1>Password Reset Request Sent.</h1>
+    <hr>
 
-<p>
-    'We’ve emailed you instructions for setting your password, if an account exists with the email you entered. 
-    You should receive them shortly.'
-</p>
+    <p>
+        'We’ve emailed you instructions for setting your password, if an account exists with the email you entered.
+        You should receive them shortly.'
+    </p>
 
-<p>
-    'If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.'
-</p>
+    <p>
+        'If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your
+        spam folder.'
+    </p>
+</div>
 
 {% endblock content %}
 
