--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -19,7 +19,7 @@
 
     {% include 'base/footer.html' %}
 </body>
-{% static 'js/main.js' as main_js %}
+{% static 'js/bundle.js' as main_js %}
 <script src="{{ main_js }}"></script>
 {% block scripts %}
 
