--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -14,7 +14,7 @@
             <form action="{% url 'account:user_login' %}" method="POST">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <small>Forgo password? <a href="{% url 'account:user_password_reset' %}">reset here</a></small> <br>
+                <small>Forgot password? <a href="{% url 'account:user_password_reset' %}">reset here</a></small> <br>
                 <button class="btn btn-primary" type="submit">Login</button>
             </form>
         </div>
