--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -6,7 +6,9 @@
 
 {% block content %}
 
-<h1>Wellcome to Blog</h1>
+<div class="container">
+    <h1>Wellcome to Blog</h1>
+</div>
 
 {% endblock content %}
 
