--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -14,6 +14,13 @@
     <li><a href="{% url 'blog:create_blog' %}">create blog</a></li>
 </ul>
 
+<h1>Recent Blogs</h1>
+<ul>
+    {% for blog in blogs  %}
+        <li>{{ blog.title }}</li>
+    {% endfor %}
+</ul>
+
 {% endblock content %}
 
 {% block scripts %}
