Added compiled css files from sass

--- a/core/templates/core/elements.html
+++ b/core/templates/core/elements.html
@@ -59,10 +59,10 @@
     <hr>
     <form>
         <div>
-            <input type="text" placeholder="Name" name="name" required>
-            <input type="text" placeholder="Email address" name="mail" required>
+            <input class="form-control" type="text" placeholder="Name" name="name" required>
+            <input class="form-control" type="text" placeholder="Email address" name="mail" required>
             <label for="country">Country</label>
-            <select id="country" name="country">
+            <select class="form-control" id="country" name="country">
                 <option value="australia">Australia</option>
                 <option value="canada">Canada</option>
                 <option value="usa">USA</option>
