--- a/static/scss/_forms.scss
+++ b/static/scss/_forms.scss
@@ -1,8 +1,27 @@
 // Forms
 // Form related sass properties
 // --------------------------------------------------------------------
-// stylelint-disable selector-no-qualifying-type
 
-//
-// Textual form controls
-//
+// Forms
+.form-container {
+    padding: 20px;
+}
+
+.form-control {
+    display: block;
+    padding: $input-padding-y $input-padding-x;
+    width: 100%;
+
+    &:focus {
+        box-shadow: $z-depth-5;
+    }
+}
+
+.errorlist {
+    color: $input-error-color;
+}
+
+.helptext{
+    font-size: 12px;
+    color: gray;
+}
